[workspace]
members = [
  "contracts/*",
  "packages/*",
]

[workspace.package]
name = "ocw"
version = "0.1.0"
authors = ["Chris Pecunies <clp@clp.is>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.lib]
crate-type = ["cdylib", "rlib"]

[workspace.profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[workspace.dependencies]
cosmwasm-schema = "1.2.2"
sylvia = "0.3.1"
cosmwasm-storage = "1.2.2"
cw-utils = "1.0.1"
cw-address-like = "1.0.4"
cw-asset = "3.0.0"
cw-item-set = "0.7.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[workspace.dependencies.cw-storage-plus]
version = "1.0.1"
features = ["macro", "iterator"]

[workspace.dependencies.cosmwasm-std]
version = "1.2.2"
features = ["iterator", "staking", "cosmwasm_1_2", "stargate", "backtraces"]


[workspace.dev-dependencies]
cw-multi-test = "0.16.2"
