[package]
name = "ollo-oracle"
version = "0.1.0"
authors = ["Chris Pecunies <clp@clp.is>"]
edition = "2021"
description = ""
license = "MIT"
exclude = [
    "contract.wasm",
    "hash.txt"
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.2.2"
sylvia = "0.3.1"
cosmwasm-storage = "1.2.2"
cw-utils = "1.0.1"
cw-address-like = "1.0.4"
cw-asset = "3.0.0"
cw-item-set = "0.7.1"
schemars = "0.8.10"
itertools = "0.10"
thiserror = { version = "1.0.31" }

[dependencies.serde]
version = "1.0.155"
default-features = false
features = ["derive"]

[dependencies.protobuf]
version = "2"
features = ["with-bytes"]
default-features = false

[dependencies.cw-storage-plus]
version = "1.0.1"
features = ["macro", "iterator"]

[dependencies.cosmwasm-std]
version = "1.2.2"
features = ["iterator", "staking", "cosmwasm_1_2", "stargate", "backtraces"]


[dev-dependencies]
cw-multi-test = "0.16.2"
anyhow = "1"


